<resources>
    <string name="app_name">Aplikasi Wisata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wika_tour_adalah_aplikasi_wisata_yang_dibuat_untuk_memudahkan_wisatawan_untuk_berlibur_di_lampung_tanpa_harus_memikirkan_penginapan_dan_transport_sehingga_wisatawan_dapat_berlibur_dengan_tenang">Wika Tour adalah aplikasi wisata yang dibuat untuk memudahkan wisatawan untuk berlibur di Lampung tanpa harus memikirkan penginapan dan transport sehingga wisatawan dapat berlibur dengan tenang</string>
    <string name="keindahan_lampung">Keindahan Lampung!</string>
    <string name="nikmati">Nikmati</string>
    <string name="panduan_aplikasi">Panduan Aplikasi</string>
    <string name="belum_punya_akun_daftar_disisni">Belum Punya Akun? Daftar Disisni!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="silahkan_masukan_identitas_diri_anda_untuk_membuat_akun">Silahkan masukan identitas diri anda untuk membuat akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_punya_akun_login_disini">Sudah Punya Akun? Login Disini!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ayo_berlibur_bersama_kami">Ayo Berlibur Bersama Kami!</string>
    <string name="katalog">Katalog</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>